<resources>
    <string name="app_name">Employee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre</string>
    <string name="work_position">Cargo</string>
    <string name="salary">Salario ($)</string>
    <string name="save">Guardar</string>
    <string name="Delete">Eliminar</string>
    <string name="cancel">Cancelar</string>
</resources>