<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_high"
    android:layout_marginStart="@dimen/margin_low"
    android:layout_marginEnd="@dimen/margin_low"
    tools:context=".view.employee.EmployeeDetailFragment">


    <TextView
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/EditTextName"
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="@dimen/margin_low"
        android:hint="@tools:sample/full_names" />

    <TextView
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_position"
        android:layout_marginTop="@dimen/margin_low"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18dp"
        />


    <EditText
        android:id="@+id/EditTextWorkPosition"
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_low"
        android:inputType="text"
        android:hint="Ingenieria en Sistemas"
        />

    <TextView
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:layout_marginTop="@dimen/margin_low"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18dp"
        />


    <EditText
        android:id="@+id/EditTextSalary"
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_low"
        android:hint="3500 U$D"
        android:inputType="number"
        />

    <Button
        android:id="@+id/buttonAdd"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="@dimen/margin_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        />

    <Button
        android:id="@+id/buttonDelete"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginTop="@dimen/margin_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        />

</LinearLayout>